# Mail_your

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: deploy.yml
apps/: __init__.py
apps/api/: Dockerfile  __init__.py  main.py
apps/api/middleware/: __init__.py  api_key.py
apps/api/routes/: __init__.py  health.py  otp.py
apps/bot/: Dockerfile  __init__.py  main.py
apps/bot/commands/: __init__.py  addemail.py  genkey.py  keys.py  logs.py  newproject.py  projects.py  removesender.py  revokekey.py  senders.py  start.py  stats.py  testkey.py  testsender.py
apps/bot/wizards/: __init__.py  addemail_wizard.py  newproject_wizard.py
apps/worker/: Dockerfile  __init__.py  main.py  tasks.py
core/: __init__.py  config.py  crypto.py  db.py  otp.py  redis_client.py
db/migrations/: 001_create_sender_emails.sql  002_create_projects.sql  003_create_api_keys.sql  004_create_otp_records.sql  005_create_email_logs.sql  006_create_bot_sessions.sql
tests/: __init__.py  conftest.py  test_api.py  test_crypto.py  test_otp.py
